--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ snowflake-snowpark-python
 streamlit
 requests
 
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.8.*
-  - snowflake-snowpark-python=
-  - streamlit=1.35.0
+#name: app_environment
+#channels:
+#  - snowflake
+#dependencies:
+#  - python=3.8.*
+#  - snowflake-snowpark-python=
+#  - streamlit=1.35.0
